src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-10.snap
---
source: src/lexer/lexer.rs
description: ","
---
[
    Token {
        kind: Comma,
        value: None,
        start: 0,
        end: 1,
    },
]
