src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-15.snap
---
source: src/lexer/lexer.rs
description: "#"
---
[
    Token {
        kind: Sharp,
        value: None,
        start: 0,
        end: 1,
    },
]
