src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-19.snap
---
source: src/lexer/lexer.rs
description: "->"
---
[
    Token {
        kind: Arrow,
        value: None,
        start: 0,
        end: 2,
    },
]
