src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-22.snap
---
source: src/lexer/lexer.rs
description: "*="
---
[
    Token {
        kind: MulAssign,
        value: None,
        start: 0,
        end: 2,
    },
]
